--- a/templates/partial/footer.html
+++ b/templates/partial/footer.html
@@ -6,9 +6,9 @@
 				<p class="text-muted"> &copy 2025 ShopMart </p>
 			</div>
 			<div class="col-md-8 text-md-center">
-				<span  class="px-2">info@pixsellz.io</span>
-				<span  class="px-2">+879-332-9375</span>
-				<span  class="px-2">Street name 123, Avanue abc</span>
+				<span  class="px-2">info@IkemTeq</span>
+				<span  class="px-2">+234-707-034-6771</span>
+				<span  class="px-2">No 23 Rehad Road, Emene Enugu</span>
 			</div>
 			<div class="col-md-2 text-md-right text-muted">
 				<i class="fab fa-lg fa-cc-visa"></i>
